# Pico

./: .gitignore
working/: pin config.txt
working/blink/: CMakeLists.txt  blink.c
working/bmp280/: CMakeLists.txt  main.c
working/hello_world/: things to get the hello world running.txt
working/hello_world/usb/: CMakeLists.txt
working/sd_fat_spi/: CMakeLists.txt  main.c  read_from_sd.c  read_from_sd.h  write_to_sd.c  write_to_sd.h
